# netbox

./: ListIPsInPrefix.py  README.md
netbox-prefix-stats-plugin/: Makefile  mkdocs.yml  pyproject.toml
netbox-prefix-stats-plugin/netbox_prefix_stats_plugin/: __init__.py  forms.py  tables.py  views.py
netbox-prefix-stats-plugin/netbox_prefix_stats_plugin/templates/netbox_prefix_stats_plugin/: _range_card.html  prefix_extra.html  prefix_ranges_grid.html
netbox-prefix-stats-plugin/tests/: __init__.py
netbox-softwares-plugin/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
netbox-softwares-plugin/netbox_softwares_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox-softwares-plugin/netbox_softwares_plugin/templates/netbox_softwares_plugin/: softwares.html
netbox-softwares-plugin/tests/: __init__.py  test_netbox_softwares_plugin.py
netbox-test-plugin/: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
netbox-test-plugin/netbox_test_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox-test-plugin/tests/: __init__.py  test_netbox_test_plugin.py
plugins/netbox-prefix-stats-plugin/: CHANGELOG.md  CONTRIBUTING.md  README.md
plugins/netbox-prefix-stats-plugin/netbox_prefix_stats_plugin/: __init__.py  filtersets.py  models.py  navigation.py  template_content.py  urls.py
plugins/netbox-prefix-stats-plugin/tests/: test_netbox_prefix_stats_plugin.py
(+5 files in other folders)
